--- a/style/scss/base/_reset.scss
+++ b/style/scss/base/_reset.scss
@@ -1,4 +1,4 @@
-/* Reset and normalize */
+/* Сброс и нормализация */
 
 *,
 *::before,
@@ -27,7 +27,7 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
+/* Сброс роли отображения HTML5 для старых браузеров */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
