--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -16,4 +16,5 @@
 @use "./sections/training";
 @use "./sections/faq";
 @use "./sections/address";
+@use "./sections/cookie-banner";
 @use "./media";
