--- a/style/scss/sections/_address.scss
+++ b/style/scss/sections/_address.scss
@@ -1,9 +1,10 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
 
 .address {
 
 	&__content {
-		padding: 0 $spacing-xxxl-desktop;
+		padding: $spacing-none-desktop $spacing-xxxl-desktop;
 		background-color: $surface;
 		display: flex;
 		flex-direction: column;
@@ -23,7 +24,7 @@
 	}
 
 	&__region {
-		height: 54px;
+		padding: $spacing-sm-desktop $spacing-md-desktop;
 	}
 
 	&__map {
@@ -41,7 +42,7 @@
 		overflow-y: auto;
 
 		&::-webkit-scrollbar {
-			width: 4px;
+			width: $spacing-xxxs-desktop;
 		}
 
 		&::-webkit-scrollbar-track {
@@ -50,25 +51,25 @@
 
 		&::-webkit-scrollbar-thumb {
 			background: rgba($text-inverse, 0.3);
-			border-radius: 4px;
+			border-radius: $spacing-xxxs-desktop;
 		}
 
 		&-list {
 			list-style: none;
-			padding: 0;
-			margin: 0;
+			padding: $spacing-none-desktop;
+			margin: $spacing-none-desktop;
 		}
 	}
 
 	&__point {
-		padding: 24px;
+		padding: $spacing-md-desktop;
 		border-top: 1px solid rgba($background, 0.2);
 		border-bottom: 1px solid rgba($background, 0.2);
 		cursor: pointer;
 		transition: background-color 0.2s;
 		display: flex;
 		flex-direction: column;
-		gap: 12px;
+		gap: $spacing-xxs-desktop;
 
 		&+& {
 			border-top: none;
@@ -84,7 +85,7 @@
 				color: $text-inverse;
 				font-size: $heading-6-desktop;
 				margin: 0;
-				font-weight: 600;
+				@include headline;
 			}
 
 			&__description {
@@ -97,15 +98,14 @@
 				color: $text-inverse;
 				font-size: $button-desktop;
 				text-decoration: none;
-				font-weight: 600;
+				@include headline;
 				display: block;
-				margin-top: 8px;
+				margin-top: 5px;
 			}
 
 			&__opening-hours {
 				color: $text-inverse;
 				font-size: $text-md-desktop;
-				margin: 0;
 			}
 
 			&__hours {
@@ -117,8 +117,6 @@
 	&__map-display {
 		flex-grow: 1;
 		background-color: #ddd;
-		background-image: url('../../image/map-placeholder.png');
-		background-size: cover;
-		background-position: center;
+		filter: grayscale(100%) brightness(105%) contrast(90%); 
 	}
 }
