--- a/style/scss/sections/_faq.scss
+++ b/style/scss/sections/_faq.scss
@@ -43,6 +43,8 @@
 			&.is-open {
 				p {
 					display: block;
+					margin-top: $spacing-md-desktop;
+					animation: fadeIn 0.3s ease;
 				}
 			}
 
@@ -62,8 +64,19 @@
 				margin: 0;
 				max-width: 89%;
 			}
-		}
 
+			.faq__arrow {
+				width: $spacing-md-desktop;
+				height: $spacing-md-desktop;
+				transition: transform 0.3s ease;
+			}
+		}
+	}
+
+	&__content li.is-open {
+		.faq__arrow {
+			transform: rotate(180deg);
+		}
 	}
 
 	&__help {
