--- a/style/css/style.css
+++ b/style/css/style.css
@@ -103,7 +103,6 @@ body {
   font-family: "Golos Text", sans-serif;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.4;
   color: #0c1625;
   background-color: #fff;
   min-height: 100%;
@@ -131,13 +130,6 @@ body {
 
 .footer {
   flex: 0 0 auto;
-}
-
-.container {
-  max-width: 1240px;
-  margin: 0 auto;
-  padding: 0 20px;
-  width: 100%;
 }
 
 h1,
@@ -1113,18 +1105,16 @@ h6 {
 .vacancies__content-item--list li:hover {
   background-color: #566a84;
   border-radius: 12px;
-  font-family: "Golos Text", sans-serif;
-  font-weight: 500;
+  font-weight: 400;
+  letter-spacing: 0;
   line-height: 100%;
-  letter-spacing: -0.04em;
 }
 .vacancies__content-item--list li.active {
   background-color: #566a84;
   border-radius: 12px;
-  font-family: "Golos Text", sans-serif;
-  font-weight: 500;
+  font-weight: 400;
+  letter-spacing: 0;
   line-height: 100%;
-  letter-spacing: -0.04em;
 }
 .vacancies__content-item--list li.empty {
   color: #6f757e;
