--- a/style/scss/sections/_requirements.scss
+++ b/style/scss/sections/_requirements.scss
@@ -94,7 +94,7 @@
 
 			.requirements__conditions-img {
 				position: absolute;
-				top: $spacing-lg-desktop;
+				bottom: 0;
 				right: 61px;
 				pointer-events: none;
 			}
